--- a/Epicture/app/src/main/res/layout/item.xml
+++ b/Epicture/app/src/main/res/layout/item.xml
@@ -7,7 +7,8 @@
 
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="180dp"
@@ -20,6 +21,12 @@
             android:textAppearance="@android:style/TextAppearance.Large"
             android:layout_margin="8dp"
             android:textAlignment="center"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/but"
+            android:layout_margin="8dp"
+            android:textAlignment="center" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
